# pyc

./: Cargo.toml  build.rs  flake.nix  module.py  shell.nix
src/: lib.rs
tests/capi/: CMakeLists.txt  default.nix  shell.nix
tests/capi/cpy/: cpy-config.cmake
tests/capi/src/: dynamic-main.c  main.c
