[package]
name = "py"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
dict_derive = "0.3.1"

[dependencies.pyo3]
version = "0.13.2"
#features = ["auto-initialize", "extension-module"]
features = ["extension-module"]

[build-dependencies]
cbindgen = "0.15"